usage endpoint:
https://pokeapi.huangtechhub.dev/usage
